--- a/src/components/viewer/viewer.html
+++ b/src/components/viewer/viewer.html
@@ -1,31 +1,22 @@
+<img [src]="base64img"  imageViewer>
 
-  <!-- <button ion-button full (click)="open()">Péguele</button>
-  <button ion-button full (click)="openAndroid()">Android .l.</button> -->
-  <img [src]="base64img"  imageViewer>
-
-  <!-- <zoom-area style="height: 600px"> -->
-  <div #viewerContainer class="viewer-container">
-        <div #viewer class="viewer">
-            <ng-container #pagesContainer>
-                <div #pageContainer class="page"
-                     [style.width.px]="pageContainerUnique.width"
-                     [style.height.px]="pageContainerUnique.height">
-                    <div class="canvas-wrapper" #canvasWrapper>
-                      <ion-scroll scrollX="true" scrollY="true" style="height: 100vh">
-                          <canvas class="page-canvas" #canvas></canvas>
-                        </ion-scroll>
-                      </div>
-                      <div #textContainer
-                      class="text-layer selectable">
-                    </div>
-                  </div>
-                </ng-container>
-              </div>
-            </div>
-          <!-- </zoom-area> -->
+<div #viewerContainer class="viewer-container">
+  <div #viewer class="viewer">
+    <ng-container #pagesContainer>
+      <div #pageContainer class="page" [style.width.px]="pageContainerUnique.width" [style.height.px]="pageContainerUnique.height">
+        <div class="canvas-wrapper" #canvasWrapper>
+          <ion-scroll scrollX="true" scrollY="true" style="height: 100vh">
+            <canvas class="page-canvas" #canvas></canvas>
+          </ion-scroll>
+        </div>
+        <div #textContainer class="text-layer selectable"></div>
+      </div>
+    </ng-container>
+  </div>
+</div>
 
 
-
+<ion-footer>
               <ion-toolbar position="bottom">
                   <ion-buttons>
                       <button ion-button icon-only [disabled]="actualPage <= 1" (click)="backPaginini()">
@@ -41,3 +32,4 @@
                     </button>
                   </ion-buttons>
               </ion-toolbar>
+</ion-footer>
